# pdf-ai

./: Dockerfile  README.md  pyproject.toml
app/: app.py  embedding_logic.py  pdf_logic.py
